import "client.comm.proto";
package client;

enum TARGET_TYPE_E
{
	ACHIEVEMENT = 1;				// 成就
	DAILY_MISSION = 2;				// 日常
}

enum TARGET_STATUS_E
{
	STATUS_DOING = 1;				// 未完成
	STATUS_PRIZE = 2;				// 领奖
	STATUS_FINISH = 3;				// 完成
}

// 请求列表
message target_list_req
{
	required TARGET_TYPE_E type = 1;
	optional server_head svr_head = 1000;
}

message target_item
{
	required uint32 id = 1;							// 任务ID
	required uint32 num = 2;						// 完成次数
	required TARGET_STATUS_E status = 3;			// 状态
	optional uint32 extra = 4;
}

// 请求列表返回
message target_list_rsp
{
	required TARGET_TYPE_E type = 1;
	repeated target_item ti = 2;
}

// 领取奖励
message target_prize_req
{
	required uint32 id = 1;
	optional server_head svr_head = 1000;
}

// 
message target_prize_rsp
{
	enum status_e
	{
		SUCCESS		= 1;	// 成功
		NEED_PREV	= 2;	// 前置任务未完成
		PACK_LIMIT	= 3;	// 背包空间不足
		STATUS_LIMIT = 4;	// 状态不对
	}
	required status_e status = 1;
	required uint32 id = 2;
	optional target_item ti = 3;
}

message target_info
{
	required uint32 target_id = 1;
	required TARGET_STATUS_E status = 2;
	optional uint32 num = 3;
}

message cond_equal
{
	repeated uint32 value = 1;
}

message cond_great
{
	repeated uint32 value = 1;
}

message cond_less
{
	repeated uint32 value = 1;
}

message target_complete_cond
{
	repeated cond_equal equal = 1;
	repeated cond_great great = 2;
	repeated cond_less less = 3;
}

message target_progress
{
	required uint32 value = 1;
	repeated uint32 equal = 2;
	repeated uint32 great = 3;
	repeated uint32 less = 4;
}

message point_tips_rsp
{
	repeated TARGET_TYPE_E fc = 1;
}
